@startuml 05_externalization_typinggame_standard_io

note as note_main
  背景がピンク：新規に作成したクラス
  背景がオレンジ：修正したクラス
end note

class Main {
  + {static} main()
  - {static} TypingGameDifficulty displayInputDifficulty()
  - {static} void displayCountDown()
  - {static} void displayResult(TypingGame typingGame)
  - {static} void displayRanking(TypingGameHistory typingGameHistory, TypingGameDifficulty difficulty)
  - {static} boolean displayInputRetry()
  - {static} static int getInputInt(int defaultValue)
}

class TypingGame #Orange {
  - TypingGameDifficulty difficulty
  - List<Question> questions
  - TypingGameListener listener
  - List<QuestionResult> results
  - ZonedDateTime startTime
  - ZonedDateTime endTime
  - Question prevQuestion
  + TypingGame(TypingGameDifficulty difficulty, List<Question> questions, TypingGameListener listener)
  + void execute()
  + List<QuestionResult> getResults()
  + long getTimeToCalculate()
  + boolean isSameDifficulty(TypingGameDifficulty difficulty)
  + int getNumberOfQuestions()
  - Question getNextQuestion()
  - String toString()
}
note right
  TypingGameListenerを介して標準入出力を使用するようにすることで、
  TypingGameから標準入出力との依存関係を切り離すことが出来た。
end note

interface TypingGameListener #Pink {
  void onGameStart(TypingGame typingGame)
  void onGameEnd(TypingGame typingGame)
  String receiveAnswer(Question question)
  void onJudgeOK(TypingGame typingGame)
  void onJudgeNG(TypingGame typingGame)
}

class NormalTypingGameListener #Pink implements TypingGameListener
note left of NormalTypingGameListener
  TypingGameから移した標準入出力の処理が入っている。
end note

enum TypingGameDifficulty {
  + EASY
  + NORMAL
  + HARD
  ..
  - String name
  - int level
  - boolean defaultLevel
  __
  + TypingGameDifficulty(String name, int level, boolean defaultLevel)
  + {static} TypingGameDifficulty of(int level)
  + {static} TypingGameDifficulty getDefault()
  + String getName()
  + int getLevel()
  + boolean lessThan(TypingGameDifficulty difficulty)
}

class TypingGameHistory {
  - List<TypingGame> typingGames
  + void add(TypingGame typingGame)
  + List<TypingGame> sortedTypingGames(TypingGameDifficulty difficulty)
  - List<TypingGame> getTypingGames(TypingGameDifficulty difficulty)
}

class TypingGameFactory #Orange {
  + {static} TypingGame generate(TypingGameDifficulty difficulty)
}
note left 
  TypingGameFactoryでTypingGameListenerの
  実装クラスを設定するように修正。
end note

class Question {
  - String word
  - TypingGameDifficulty difficulty
  + Question(String word, TypingGameDifficulty difficulty)
  + String getWord()
}

class QuestionResult {
  - Question question
  - String answer
  - boolean judge
  + QuestionResult(Question question, String answer, boolean judge)
  + Question getQuestion()
  + String getAnswer()
  + boolean isJudge()
}

class QuestionFactory {
  + static List<Question> generate(TypingGameDifficulty difficulty)
  - static List<Question> generate()
}

class StandardInputReader {}

Main -- TypingGameFactory : use >
Main -- StandardInputReader : use >

TypingGameFactory -- QuestionFactory : use >

TypingGameFactory -- TypingGame : generate >

QuestionFactory -- Question : generate >

TypingGameHistory --> TypingGame
TypingGame --> TypingGameDifficulty
TypingGame --> Question
TypingGame --> QuestionResult
TypingGame --> TypingGameListener

NormalTypingGameListener -- StandardInputReader : use >

@enduml
